WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203227
Fix missing exception check in JSON Stringifier.
https://bugs.webkit.org/show_bug.cgi?id=203227
Summary
Fix missing exception check in JSON Stringifier.
Mark Lam
Reported
2019-10-21 17:42:24 PDT
<
rdar://problem/56459854
>
Attachments
proposed patch.
(2.56 KB, patch)
2019-10-21 17:45 PDT
,
Mark Lam
keith_miller
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-10-21 17:45:58 PDT
Created
attachment 381487
[details]
proposed patch.
Keith Miller
Comment 2
2019-10-21 17:48:13 PDT
Comment on
attachment 381487
[details]
proposed patch. r=me
Mark Lam
Comment 3
2019-10-21 17:52:09 PDT
Thanks for the review. Landed in
r251403
: <
http://trac.webkit.org/r251403
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug