Fix missing exception check in JSON Stringifier. https://bugs.webkit.org/show_bug.cgi?id=203227 <rdar://problem/56459854>

Reviewed by Keith Miller.

JSTests:

* stress/missing-exception-check-in-josn-stringifier.js: Added.

Source/JavaScriptCore:

* runtime/JSONObject.cpp:
(JSC::Stringifier::Stringifier):



Canonical link: https://commits.webkit.org/216640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251403 268f45cc-cd09-0410-ab3c-d52691b4dbfc